--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -36,7 +36,7 @@ jobs:
 
       # $ sudo wget http://ports.ubuntu.com/pool/main/l/linux/linux-source-5.4.0_5.4.0-62.70_all.deb
       # $ sudo dpkg -i linux-source-5.4.0_5.4.0-62.70_all.deb
-      # $ sudo tar xjf /usr/src/linux-source-5.4.0/linux-source-5.4.0.tar.bz
+      # $ sudo tar xjf /usr/src/linux-source-5.4.0/linux-source-5.4.0.tar.bz2
     - name: AutoGen
       # Build your program with the given configuration
       run: sh ${{github.workspace}}/autogen.sh
