--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Env Detect
+      run: ls /boot && exit 1
     - name: Install Deps
       # Install Deps
       run: sudo apt install -y linux-image-$(uname -r) linux-modules-$(uname -r) linux-modules-extra-$(uname -r)
