--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Env Detect
-      run: ls /boot && exit 1
+    # - name: Env Detect
+    #   run: ls /boot && exit 1
     - name: Install Deps
       # Install Deps
       run: sudo apt install -y linux-image-$(uname -r) linux-modules-$(uname -r) linux-modules-extra-$(uname -r)
@@ -31,16 +31,16 @@ jobs:
       run: sudo apt install -y git libtool libtool-bin libyaml-dev ed libreadline-dev libsnmp-dev mpi-default-dev module-assistant quilt libncurses5-dev libncurses-dev bison flex gnupg libelf-dev gcc libssl-dev bc bzip2 build-essential udev kmod cpio libfuse-dev libattr1-dev libblkid-dev uuid-dev devscripts fakeroot kernel-wedge libudev-dev libpython3-dev swig gettext texinfo debhelper dh-exec update-notifier-common sg3-utils attr mpi-default-bin selinux-utils 
       # python python2 python2-minimal python2.7 libpython2-stdlib libsgutils2-2 libpython2.7-stdlib python2.7-minimal libpython2.7-minimal
       # dpatch
-    - name: Download Kernel Source
-      run: cd /tmp && sudo wget http://ports.ubuntu.com/pool/main/l/linux/linux-source-5.4.0_5.4.0-62.70_all.deb
     - name: Install Kernel Source
-      run: cd /tmp && sudo dpkg -i linux-source-5.4.0_5.4.0-62.70_all.deb && ls /usr/src && sudo bzip2 -d /usr/src/linux-source-5.4.0/linux-source-5.4.0.tar.bz2
+      run: sudo apt install -y kernel-devel-$(uname -r) kernel-source-$(uname -r)
+     #- name: Install Kernel Source
+     # run: cd /tmp && sudo dpkg -i linux-source-5.4.0_5.4.0-62.70_all.deb && ls /usr/src && sudo bzip2 -d /usr/src/linux-source-5.4.0/linux-source-5.4.0.tar.bz2
 
     - name: Configure Kernel config file
-      run: ls /usr/src/linux-source-5.4.0/  && cp /boot/config-5.4.0-62-generic /usr/src/linux-source-5.4.0/.config
+      run: cp /boot/config-6.8.0-1017-azure /usr/src/$(uname -r)/.config
 
     - name: Compile Kernel
-      run: cd /usr/src/linux-source-5.4.0/ && ls && make -j $(nproc)
+      run: cd /usr/src/$(uname -r)/ && ls && make -j $(nproc)
       # $ sudo wget http://ports.ubuntu.com/pool/main/l/linux/linux-source-5.4.0_5.4.0-62.70_all.deb
       # $ sudo dpkg -i linux-source-5.4.0_5.4.0-62.70_all.deb
       # $ sudo tar xjf /usr/src/linux-source-5.4.0/linux-source-5.4.0.tar.bz2
